added save endpoint for barcode
